--- a/packages/stick-demo/index.html
+++ b/packages/stick-demo/index.html
@@ -7,7 +7,7 @@
     <title>testbed</title>
 </head>
 <body>
-    <x-app header="123"></x-app>
+    <x-app></x-app>
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
