--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -4,12 +4,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./styles/reset.css" rel="stylesheet">
-    <link href="./styles/index.css" rel="stylesheet">
+    <link href="./index.css" rel="stylesheet">
     <title>testbed</title>
 </head>
 <body>
     <x-app></x-app>
-    <script type="module" src="./index.tsx"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
